@@ -1,3 +1,10 @@
+2006-06-20  Jeremy Katz  <katzj@redhat.com>
+
+	* pykickstart/parser.py (KickstartHandlers.doIscsi): Initial iscsi
+	support.  This syntax is likely to change but this makes testing
+	so much easier.
+	* pykickstart/data.py (KickstartData.__init__): Add iscsi data.
+
 2006-06-20  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart/parser (KickstartHandlers.doRaid):  Handle a RAID device
